[package]
name = "realworld-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
axum = { version = "0.4.4", features = ["json","headers"] }
axum-debug = "0.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.19"
http = "0.2.6"
jsonwebtoken = "8.0.1"
once_cell = "1.9.0"
rust-argon2 = "1.0.0"
rustls = "0.20.2"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
sqlx = {version = "0.5.10",features=["runtime-tokio-rustls","postgres","macros","chrono","offline"]}
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tower = "0.4.11"
tower-http = {version="0.2.0",features=["full"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
validator = { version = "0.14.0", features = ["derive"] }

[features]
