[package]
name = "realworld-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
axum = { version = "0.6.2", features = ["json","headers","macros"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenvy = "0.15.6"
futures-util = "0.3.19"
http = "0.2.6"
jsonwebtoken = "8.0.1"
once_cell = "1.9.0"
rust-argon2 = "1.0.0"
rustls = "0.20.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = {version = "0.6.2",features=["runtime-tokio-rustls","postgres","macros","chrono","offline"]}
thiserror = "1.0.30"
time = { version = "0.3.17", features = ["macros"] }
tokio = { version = "1.15.0", features = ["full"] }
tower =  {version="0.4.13",features=["full"]}
tower-http = {version="0.3.5",features=["full"]}
tracing = "0.1.29"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.16",features = ["env-filter","time","registry","json"]}
validator = { version = "0.16.0", features = ["derive"] }

[features]
