[package]
name = "realworld-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.5", features = ["json","headers","macros"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
futures-util = "0.3.26"
http = "0.2.8"
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
rust-argon2 = "1.0.0"
rustls = "0.20.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = {version = "0.6.2",features=["runtime-tokio-rustls","postgres","macros","chrono","offline"]}
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["macros"] }
tokio = { version = "1.25.0", features = ["full"] }
tower =  {version="0.4.13",features=["full"]}
tower-http = {version="0.3.5",features=["full"]}
tracing = "0.1.29"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.16",features = ["env-filter","time","registry","json"]}
uuid = { version = "1.3.0", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[features]
